fix bugs overflow & pattern position

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   background: var(--brand-color);
   font-family: "Citizen OT";
   margin: 0;
-  overflow: none;
+  overflow: hidden;
 }
 
 
